feat: implement the add transactin service logic
